# agi_hack

./: .gitignore  stock-analysis.anyt  youtube-video-summarizer-fast.anyt  youtube-video-summarizer-fast2.anyt
anyt_workspace_stock_analysis/: fetch_stock.py  stocks.csv
anyt_workspace_yt_summarizer_fast/: POSTING_INSTRUCTIONS.md  anyt-agent-skills-presentation.html  post_to_twitter.py  pspm-lock.json  pspm.json  sections.json  skills-lock.json  summary.md  tweet_thread.md  tweet_thread_formatted.txt
anyt_workspace_yt_summarizer_fast/.adal/skills/: ebook
anyt_workspace_yt_summarizer_fast/.continue/skills/: youtube-downloader
anyt_workspace_yt_summarizer_fast/.cortex/skills/: twitter-cli
anyt_workspace_yt_summarizer_fast/.pspm/skills/anyt/ebook/runtime/: config.py  convert_ebook.py  pyproject.toml
anyt_workspace_yt_summarizer_fast/.pspm/skills/anyt/youtube-downloader/runtime/: download_cover.py  download_transcript.py  download_video.py  pyproject.toml  screenshot_video.py
anyt_workspace_yt_summarizer_fast/.qoder/skills/: twitter-cli
anyt_workspace_yt_summarizer_fast/ebook_output/: summary.epub
anyt_workspace_yt_summarizer_fast/frames/: manifest.json
anyt_workspace_yt_summarizer_fast/skills/: ebook  twitter-cli  youtube-downloader
anyt_workspace_yt_summarizer_fast/summaries/: all_summaries.json  section_01.md  section_02.md  section_03.md  section_04.md  section_05.md  section_06.md  section_07.md  section_08.md  section_09.md  section_10.md  section_11.md
anyt_workspace_yt_summarizer_fast/transcripts/: 4uzGDAoNOZc.json  4uzGDAoNOZc.txt
(+24 files in other folders)
